// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabList renders with no tabs 1`] = `
<div>
  <div
    class="fui-TabList"
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2}}"
    role="tablist"
  />
</div>
`;

exports[`TabList renders with tabs 1`] = `
<div>
  <div
    class="fui-TabList"
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2}}"
    role="tablist"
  >
    <button
      class="fui-Tab"
      role="tab"
      style="--fui-Tab__indicator--offset: 0px; --fui-Tab__indicator--scale: 1;"
      value="1"
    >
      <span
        class="fui-Tab__content"
      >
        First
      </span>
    </button>
    <button
      class="fui-Tab"
      role="tab"
      style="--fui-Tab__indicator--offset: 0px; --fui-Tab__indicator--scale: 1;"
      value="2"
    >
      <span
        class="fui-Tab__content"
      >
        Second
      </span>
    </button>
    <button
      class="fui-Tab"
      role="tab"
      style="--fui-Tab__indicator--offset: 0px; --fui-Tab__indicator--scale: 1;"
      value="3"
    >
      <span
        class="fui-Tab__content"
      >
        Third
      </span>
    </button>
  </div>
</div>
`;
